--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/OversizedTextDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/OversizedTextDialog.form
@@ -3,7 +3,7 @@
   <grid id="d7a6c" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="12" y="22" width="562" height="355"/>
+      <xy x="12" y="22" width="686" height="457"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -64,7 +64,7 @@
           </grid>
         </constraints>
       </hspacer>
-      <grid id="92168" layout-manager="GridLayoutManager" row-count="11" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="92168" layout-manager="GridLayoutManager" row-count="15" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -167,7 +167,7 @@
           </vspacer>
           <component id="9cf65" class="javax.swing.JCheckBox" binding="payloadCheckBox">
             <constraints>
-              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Reject SOAP requests that contain more than:"/>
@@ -176,7 +176,7 @@
           </component>
           <component id="9ee25" class="javax.swing.JTextField" binding="payloadCountField">
             <constraints>
-              <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="90" height="-1"/>
               </grid>
             </constraints>
@@ -184,7 +184,7 @@
           </component>
           <component id="bd180" class="javax.swing.JLabel">
             <constraints>
-              <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="12" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="payload elements"/>
@@ -193,7 +193,7 @@
           </component>
           <component id="3df64" class="javax.swing.JCheckBox" binding="soapEnvCheckBox">
             <constraints>
-              <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Require a valid SOAP envelope (one Body, no trailers)"/>
@@ -202,7 +202,7 @@
           </component>
           <vspacer id="be893">
             <constraints>
-              <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+              <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="8"/>
               </grid>
             </constraints>
@@ -237,6 +237,68 @@
             <properties>
               <text value="characters"/>
             </properties>
+          </component>
+          <vspacer id="5c17f">
+            <constraints>
+              <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                <minimum-size width="-1" height="8"/>
+              </grid>
+            </constraints>
+          </vspacer>
+          <component id="7c558" class="javax.swing.JCheckBox" binding="namespaceCountCheckBox">
+            <constraints>
+              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Reject if distinct namespace declarations exceeds:"/>
+            </properties>
+          </component>
+          <component id="6ace5" class="javax.swing.JTextField" binding="namespaceCountField">
+            <constraints>
+              <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="90" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="ad98f" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="number"/>
+            </properties>
+          </component>
+          <vspacer id="58fa0">
+            <constraints>
+              <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                <minimum-size width="-1" height="8"/>
+              </grid>
+            </constraints>
+          </vspacer>
+          <component id="2b0ca" class="javax.swing.JCheckBox" binding="namespacePrefixCountCheckBox">
+            <constraints>
+              <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Reject if distinct namespace prefix declarations exceeds:"/>
+            </properties>
+          </component>
+          <component id="eef4" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="number"/>
+            </properties>
+          </component>
+          <component id="12406" class="javax.swing.JTextField" binding="namespacePrefixCountField">
+            <constraints>
+              <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="90" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
